fix anchors and spacing

--- a/src/assets/scss/livepage/responsive.scss
+++ b/src/assets/scss/livepage/responsive.scss
@@ -10,7 +10,7 @@
 }
 
 @media only screen and (max-width: 660px) {  
-  #challenge {
+  #Challenges {
     .challenge-item {        
       width: 76%;
       height: 10em;        
